--- a/index.html
+++ b/index.html
@@ -57,11 +57,21 @@
                 <h2 class="visually-hidden-title">Why are we</h2>
                 <ul class="why-are-we-list list">
                     <li class="why-are-we-list-item">
+                        <div class="why-are-we-icons-box">
+                            <svg class="why-are-we-icons">
+                                <use href="./images/icons.svg#icon-antenna"></use>
+                            </svg>
+                        </div>
                         <h3 class="why-are-we-list-title">Strategy</h3>
                         <p class="why-are-we-text">Our goal is to identify the business
                             problem to walk away with the perfect and creative solution.</p>
                     </li>
                     <li class="why-are-we-list-item">
+                        <div class="why-are-we-icons-box">
+                            <svg class="why-are-we-icons">
+                                <use href="./images/icons.svg#icon-clock"></use>
+                            </svg>
+                        </div>
                         <h3 class="why-are-we-list-title">Punctuality</h3>
                         <p class="why-are-we-text">Bring the key message to the brand's audience for the best price
                             within the shortest possible
@@ -69,12 +79,22 @@
                         </p>
                     </li>
                     <li class="why-are-we-list-item">
+                        <div class="why-are-we-icons-box">
+                            <svg class="why-are-we-icons">
+                                <use href="./images/icons.svg#icon-diagram"></use>
+                            </svg>
+                        </div>
                         <h3 class="why-are-we-list-title">Diligence</h3>
                         <p class="why-are-we-text">Research and confirm brands that present the strongest digital
                             growth opportunities and minimize
                             risk.</p>
                     </li>
                     <li class="why-are-we-list-item">
+                        <div class="why-are-we-icons-box">
+                            <svg class="why-are-we-icons">
+                                <use href="./images/icons.svg#icon-astronaut"></use>
+                            </svg>
+                        </div>
                         <h3 class="why-are-we-list-title">Technologies</h3>
                         <p class="why-are-we-text">Design practice focused on digital experiences. We bring forth a
                             deep passion for
@@ -108,6 +128,27 @@
                         <div class="team-list-block">
                             <h3 class="team-list-title">Mark Guerrero</h3>
                             <p class="team-text">Product Designer</p>
+                            <ul class="team-socials-list list">
+                                <li class="team-socials-item"><a href="" class="team-socials-link link" target="_blank"
+                                        rel="noopener noreferrer"><svg class="team-icons">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg> </a>
+                                </li>
+                                <li class="team-socials-item"><a href="" class="team-socials-link link" target="_blank"
+                                        rel="noopener noopener"><svg class="team-icons">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                        </svg></a></li>
+                                <li class="team-socials-item"><a href="" class="team-socials-link link" target="_blank"
+                                        rel="noopener noopener"> <svg class="team-icons">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg></a>
+                                </li>
+                                <li class="team-socials-item"><a href="" class="team-socials-link link" target="_blank"
+                                        rel="noopener noopener"> <svg class="team-icons">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                        </svg></a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="team-list-item">
@@ -115,6 +156,29 @@
                         <div class="team-list-block">
                             <h3 class="team-list-title">Tom Ford</h3>
                             <p class="team-text">Frontend Developer</p>
+                            <ul class="team-socials-list list">
+                                <li class="team-socials-item"><a href="" class="team-socials-link link" target="_blank"
+                                        rel="noopener noreferrer"><svg class="team-icons">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg> </a>
+                                </li>
+                                <li class="team-socials-item"><a href="" class="team-socials-link link" target="_blank"
+                                        rel="noopener noopener"><svg class="team-icons">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                        </svg></a></li>
+                                <li class="team-socials-item"><a href="" class="team-socials-link link" target="_blank"
+                                        rel="noopener noopener">
+                                        <svg class="team-icons">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg></a>
+                                </li>
+                                <li class="team-socials-item"><a href="" class="team-socials-link link" target="_blank"
+                                        rel="noopener noopener">
+                                        <svg class="team-icons">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                        </svg></a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="team-list-item">
@@ -122,6 +186,29 @@
                         <div class="team-list-block">
                             <h3 class="team-list-title">Camila Garcia</h3>
                             <p class="team-text">Marketing</p>
+                            <ul class="team-socials-list list">
+                                <li class="team-socials-item"><a href="" class="team-socials-link link" target="_blank"
+                                        rel="noopener noreferrer"><svg class="team-icons">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg> </a>
+                                </li>
+                                <li class="team-socials-item"><a href="" class="team-socials-link link" target="_blank"
+                                        rel="noopener noopener"><svg class="team-icons">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                        </svg></a></li>
+                                <li class="team-socials-item"><a href="" class="team-socials-link link" target="_blank"
+                                        rel="noopener noopener">
+                                        <svg class="team-icons">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg></a>
+                                </li>
+                                <li class="team-socials-item"><a href="" class="team-socials-link link" target="_blank"
+                                        rel="noopener noopener">
+                                        <svg class="team-icons">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                        </svg></a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="team-list-item">
@@ -129,18 +216,102 @@
                         <div class="team-list-block">
                             <h3 class="team-list-title">Daniel Wilson</h3>
                             <p class="team-text">UI Designer</p>
+                            <ul class="team-socials-list list">
+                                <li class="team-socials-item"><a href="" class="team-socials-link link" target="_blank"
+                                        rel="noopener noreferrer"><svg class="team-icons">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg> </a>
+                                </li>
+                                <li class="team-socials-item"><a href="" class="team-socials-link link" target="_blank"
+                                        rel="noopener noopener"><svg class="team-icons">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                        </svg></a></li>
+                                <li class="team-socials-item"><a href="" class="team-socials-link link" target="_blank"
+                                        rel="noopener noopener">
+                                        <svg class="team-icons">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg></a>
+                                </li>
+                                <li class="team-socials-item"><a href="" class="team-socials-link link" target="_blank"
+                                        rel="noopener noopener">
+                                        <svg class="team-icons">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                        </svg></a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
+                </ul>
+            </div>
+        </section>
+        <!--Customers-->
+        <section class="customers">
+            <div class="container">
+                <h2 class="customers-title">Customers</h2>
+                <ul class="customers-list list">
+                    <li class="customers-list-item"><a href="" class="customers-link link" target="_blank"
+                            rel="noopener noreferrer"><svg class="customers-icon">
+                                <use href="./images/icons.svg#icon-client_1"></use>
+                            </svg></a></li>
+                    <li class="customers-list-item"><a href="" class="customers-link link" target="_blank"
+                            rel="noopener noreferrer"><svg class="customers-icon">
+                                <use href="./images/icons.svg#icon-client_2"></use>
+                            </svg></a></li>
+                    <li class="customers-list-item"><a href="" class="customers-link link" target="_blank"
+                            rel="noopener noreferrer"><svg class="customers-icon">
+                                <use href="./images/icons.svg#icon-client_3"></use>
+                            </svg></a></li>
+                    <li class="customers-list-item"><a href="" class="customers-link link" target="_blank"
+                            rel="noopener noreferrer"><svg class="customers-icon">
+                                <use href="./images/icons.svg#icon-client_4"></use>
+                            </svg></a></li>
+                    <li class="customers-list-item"><a href="" class="customers-link link" target="_blank"
+                            rel="noopener noreferrer"><svg class="customers-icon">
+                                <use href="./images/icons.svg#icon-client_5"></use>
+                            </svg></a></li>
+                    <li class="customers-list-item"><a href="" class="customers-link link" target="_blank"
+                            rel="noopener noreferrer"><svg class="customers-icon">
+                                <use href="./images/icons.svg#icon-client_6"></use>
+                            </svg></a></li>
                 </ul>
             </div>
         </section>
     </main>
 
     <footer class="footer">
-        <div class="container">
-            <a class="footer-link link" href="./index.html">Web<span class="footer-logo">Studio</span></a>
-            <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing &
-                growth solutions.</p>
+        <div class="footer-conteiner container">
+            <div>
+                <a class="footer-link link" href="./index.html">Web<span class="footer-logo">Studio</span></a>
+                <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing
+                    &
+                    growth solutions.</p>
+            </div>
+            <div class="footer-soc-conteiner">
+                <h2 class="footer-soc-title">Social media</h2>
+                <ul class="footer-socials-list list">
+                    <li class="footer-socials-item"><a href="" class="footer-socials-link link" target="_blank"
+                            rel="noopener noreferrer"><svg class="footer-icons">
+                                <use href="./images/icons.svg#icon-instagram"></use>
+                            </svg> </a>
+                    </li>
+                    <li class="footer-socials-item"><a href="" class="footer-socials-link link" target="_blank"
+                            rel="noopener noopener"><svg class="footer-icons">
+                                <use href="./images/icons.svg#icon-twitter"></use>
+                            </svg></a></li>
+                    <li class="footer-socials-item"><a href="" class="footer-socials-link link" target="_blank"
+                            rel="noopener noopener">
+                            <svg class="footer-icons">
+                                <use href="./images/icons.svg#icon-facebook"></use>
+                            </svg></a>
+                    </li>
+                    <li class="footer-socials-item"><a href="" class="footer-socials-link link" target="_blank"
+                            rel="noopener noopener">
+                            <svg class="footer-icons">
+                                <use href="./images/icons.svg#icon-linkedin"></use>
+                            </svg></a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </footer>
 </body>
