--- a/portfolio.html
+++ b/portfolio.html
@@ -99,7 +99,7 @@
                         </a>
                     </li>
                     <li class="project-card-item">
-                        <a href="" class="link">
+                        <a href="" class="project-card-link link">
                             <img src="./images/project_card_6.jpg" alt="project card 6" width="360">
                             <div class="card-style">
                                 <h2 class="project-card-title">Online Courses</h2>
@@ -108,7 +108,7 @@
                         </a>
                     </li>
                     <li class="project-card-item">
-                        <a href="" class="link">
+                        <a href="" class="project-card-link link">
                             <img src="./images/project_card_7.jpg" alt="project card 7" width="360">
                             <div class="card-style">
                                 <h2 class="project-card-title">Instagram Stories Concept</h2>
@@ -117,7 +117,7 @@
                         </a>
                     </li>
                     <li class="project-card-item">
-                        <a href="" class="link">
+                        <a href="" class="project-card-link link">
                             <img src="./images/project_card_8.jpg" alt="project card 8" width="360">
                             <div class="card-style">
                                 <h2 class="project-card-title">Organic Food</h2>
@@ -126,7 +126,7 @@
                         </a>
                     </li>
                     <li class="project-card-item">
-                        <a href="" class="link">
+                        <a href="" class="project-card-link link">
                             <img src="./images/project_card_9.jpg" alt="project card 9" width="360">
                             <div class="card-style">
                                 <h2 class="project-card-title">Fresh Coffee</h2>
@@ -140,10 +140,39 @@
     </main>
 
     <footer class="footer">
-        <div class="container">
-            <a class="footer-link link" href="./index.html">Web<span class="footer-logo">Studio</span></a>
-            <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing &
-                growth solutions.</p>
+        <div class="footer-conteiner container">
+            <div>
+                <a class="footer-link link" href="./index.html">Web<span class="footer-logo">Studio</span></a>
+                <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing
+                    &
+                    growth solutions.</p>
+            </div>
+            <div class="footer-soc-conteiner">
+                <h2 class="footer-soc-title">Social media</h2>
+                <ul class="footer-socials-list list">
+                    <li class="footer-socials-item"><a href="" class="footer-socials-link link" target="_blank"
+                            rel="noopener noreferrer"><svg class="footer-icons">
+                                <use href="./images/icons.svg#icon-instagram"></use>
+                            </svg> </a>
+                    </li>
+                    <li class="footer-socials-item"><a href="" class="footer-socials-link link" target="_blank"
+                            rel="noopener noopener"><svg class="footer-icons">
+                                <use href="./images/icons.svg#icon-twitter"></use>
+                            </svg></a></li>
+                    <li class="footer-socials-item"><a href="" class="footer-socials-link link" target="_blank"
+                            rel="noopener noopener">
+                            <svg class="footer-icons">
+                                <use href="./images/icons.svg#icon-facebook"></use>
+                            </svg></a>
+                    </li>
+                    <li class="footer-socials-item"><a href="" class="footer-socials-link link" target="_blank"
+                            rel="noopener noopener">
+                            <svg class="footer-icons">
+                                <use href="./images/icons.svg#icon-linkedin"></use>
+                            </svg></a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </footer>
 </body>
