--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <ul class="why-are-we-list list">
                     <li class="why-are-we-list-item">
                         <div class="why-are-we-icons-box">
-                            <svg class="why-are-we-icons">
+                            <svg class="why-are-we-icons" width="64" height="64">
                                 <use href="./images/icons.svg#icon-antenna"></use>
                             </svg>
                         </div>
@@ -68,7 +68,7 @@
                     </li>
                     <li class="why-are-we-list-item">
                         <div class="why-are-we-icons-box">
-                            <svg class="why-are-we-icons">
+                            <svg class="why-are-we-icons" width="64" height="64">
                                 <use href="./images/icons.svg#icon-clock"></use>
                             </svg>
                         </div>
@@ -80,7 +80,7 @@
                     </li>
                     <li class="why-are-we-list-item">
                         <div class="why-are-we-icons-box">
-                            <svg class="why-are-we-icons">
+                            <svg class="why-are-we-icons" width="64" height="64">
                                 <use href="./images/icons.svg#icon-diagram"></use>
                             </svg>
                         </div>
@@ -91,7 +91,7 @@
                     </li>
                     <li class="why-are-we-list-item">
                         <div class="why-are-we-icons-box">
-                            <svg class="why-are-we-icons">
+                            <svg class="why-are-we-icons" width="64" height="64">
                                 <use href="./images/icons.svg#icon-astronaut"></use>
                             </svg>
                         </div>
@@ -130,21 +130,21 @@
                             <p class="team-text">Product Designer</p>
                             <ul class="team-socials-list list">
                                 <li class="team-socials-item"><a href="" class="team-socials-link link" target="_blank"
-                                        rel="noopener noreferrer"><svg class="team-icons">
+                                        rel="noopener noreferrer"><svg class="team-icons" width="16" height="16">
                                             <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg> </a>
                                 </li>
                                 <li class="team-socials-item"><a href="" class="team-socials-link link" target="_blank"
-                                        rel="noopener noopener"><svg class="team-icons">
+                                        rel="noopener noopener"><svg class="team-icons" width="16" height="16">
                                             <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg></a></li>
                                 <li class="team-socials-item"><a href="" class="team-socials-link link" target="_blank"
-                                        rel="noopener noopener"> <svg class="team-icons">
+                                        rel="noopener noopener"> <svg class="team-icons" width="16" height="16">
                                             <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg></a>
                                 </li>
                                 <li class="team-socials-item"><a href="" class="team-socials-link link" target="_blank"
-                                        rel="noopener noopener"> <svg class="team-icons">
+                                        rel="noopener noopener"> <svg class="team-icons" width="16" height="16">
                                             <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg></a>
                                 </li>
@@ -158,23 +158,23 @@
                             <p class="team-text">Frontend Developer</p>
                             <ul class="team-socials-list list">
                                 <li class="team-socials-item"><a href="" class="team-socials-link link" target="_blank"
-                                        rel="noopener noreferrer"><svg class="team-icons">
+                                        rel="noopener noreferrer"><svg class="team-icons" width="16" height="16">
                                             <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg> </a>
                                 </li>
                                 <li class="team-socials-item"><a href="" class="team-socials-link link" target="_blank"
-                                        rel="noopener noopener"><svg class="team-icons">
+                                        rel="noopener noopener"><svg class="team-icons" width="16" height="16">
                                             <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg></a></li>
                                 <li class="team-socials-item"><a href="" class="team-socials-link link" target="_blank"
                                         rel="noopener noopener">
-                                        <svg class="team-icons">
+                                        <svg class="team-icons" width="16" height="16">
                                             <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg></a>
                                 </li>
                                 <li class="team-socials-item"><a href="" class="team-socials-link link" target="_blank"
                                         rel="noopener noopener">
-                                        <svg class="team-icons">
+                                        <svg class="team-icons" width="16" height="16">
                                             <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg></a>
                                 </li>
@@ -188,23 +188,23 @@
                             <p class="team-text">Marketing</p>
                             <ul class="team-socials-list list">
                                 <li class="team-socials-item"><a href="" class="team-socials-link link" target="_blank"
-                                        rel="noopener noreferrer"><svg class="team-icons">
+                                        rel="noopener noreferrer"><svg class="team-icons" width="16" height="16">
                                             <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg> </a>
                                 </li>
                                 <li class="team-socials-item"><a href="" class="team-socials-link link" target="_blank"
-                                        rel="noopener noopener"><svg class="team-icons">
+                                        rel="noopener noopener"><svg class="team-icons" width="16" height="16">
                                             <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg></a></li>
                                 <li class="team-socials-item"><a href="" class="team-socials-link link" target="_blank"
                                         rel="noopener noopener">
-                                        <svg class="team-icons">
+                                        <svg class="team-icons" width="16" height="16">
                                             <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg></a>
                                 </li>
                                 <li class="team-socials-item"><a href="" class="team-socials-link link" target="_blank"
                                         rel="noopener noopener">
-                                        <svg class="team-icons">
+                                        <svg class="team-icons" width="16" height="16">
                                             <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg></a>
                                 </li>
@@ -218,23 +218,23 @@
                             <p class="team-text">UI Designer</p>
                             <ul class="team-socials-list list">
                                 <li class="team-socials-item"><a href="" class="team-socials-link link" target="_blank"
-                                        rel="noopener noreferrer"><svg class="team-icons">
+                                        rel="noopener noreferrer"><svg class="team-icons" width="16" height="16">
                                             <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg> </a>
                                 </li>
                                 <li class="team-socials-item"><a href="" class="team-socials-link link" target="_blank"
-                                        rel="noopener noopener"><svg class="team-icons">
+                                        rel="noopener noopener"><svg class="team-icons" width="16" height="16">
                                             <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg></a></li>
                                 <li class="team-socials-item"><a href="" class="team-socials-link link" target="_blank"
                                         rel="noopener noopener">
-                                        <svg class="team-icons">
+                                        <svg class="team-icons" width="16" height="16">
                                             <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg></a>
                                 </li>
                                 <li class="team-socials-item"><a href="" class="team-socials-link link" target="_blank"
                                         rel="noopener noopener">
-                                        <svg class="team-icons">
+                                        <svg class="team-icons" width="16" height="16">
                                             <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg></a>
                                 </li>
@@ -250,27 +250,27 @@
                 <h2 class="customers-title">Customers</h2>
                 <ul class="customers-list list">
                     <li class="customers-list-item"><a href="" class="customers-link link" target="_blank"
-                            rel="noopener noreferrer"><svg class="customers-icon">
+                            rel="noopener noreferrer"><svg class="customers-icon" width="104" height="">
                                 <use href="./images/icons.svg#icon-client_1"></use>
                             </svg></a></li>
                     <li class="customers-list-item"><a href="" class="customers-link link" target="_blank"
-                            rel="noopener noreferrer"><svg class="customers-icon">
+                            rel="noopener noreferrer"><svg class="customers-icon" width="104" height="">
                                 <use href="./images/icons.svg#icon-client_2"></use>
                             </svg></a></li>
                     <li class="customers-list-item"><a href="" class="customers-link link" target="_blank"
-                            rel="noopener noreferrer"><svg class="customers-icon">
+                            rel="noopener noreferrer"><svg class="customers-icon" width="104" height="">
                                 <use href="./images/icons.svg#icon-client_3"></use>
                             </svg></a></li>
                     <li class="customers-list-item"><a href="" class="customers-link link" target="_blank"
-                            rel="noopener noreferrer"><svg class="customers-icon">
+                            rel="noopener noreferrer"><svg class="customers-icon" width="104" height="">
                                 <use href="./images/icons.svg#icon-client_4"></use>
                             </svg></a></li>
                     <li class="customers-list-item"><a href="" class="customers-link link" target="_blank"
-                            rel="noopener noreferrer"><svg class="customers-icon">
+                            rel="noopener noreferrer"><svg class="customers-icon" width="104" height="">
                                 <use href="./images/icons.svg#icon-client_5"></use>
                             </svg></a></li>
                     <li class="customers-list-item"><a href="" class="customers-link link" target="_blank"
-                            rel="noopener noreferrer"><svg class="customers-icon">
+                            rel="noopener noreferrer"><svg class="customers-icon" width="104" height="">
                                 <use href="./images/icons.svg#icon-client_6"></use>
                             </svg></a></li>
                 </ul>
@@ -280,33 +280,33 @@
 
     <footer class="footer">
         <div class="footer-conteiner container">
-            <div>
+            <div class="footer-info-conteiner">
                 <a class="footer-link link" href="./index.html">Web<span class="footer-logo">Studio</span></a>
                 <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing
                     &
                     growth solutions.</p>
             </div>
             <div class="footer-soc-conteiner">
-                <h2 class="footer-soc-title">Social media</h2>
+                <p class="footer-soc-text">Social media</p>
                 <ul class="footer-socials-list list">
                     <li class="footer-socials-item"><a href="" class="footer-socials-link link" target="_blank"
-                            rel="noopener noreferrer"><svg class="footer-icons">
+                            rel="noopener noreferrer"><svg class="footer-icons" width="24" height="24">
                                 <use href="./images/icons.svg#icon-instagram"></use>
                             </svg> </a>
                     </li>
                     <li class="footer-socials-item"><a href="" class="footer-socials-link link" target="_blank"
-                            rel="noopener noopener"><svg class="footer-icons">
+                            rel="noopener noopener"><svg class="footer-icons" width="24" height="24">
                                 <use href="./images/icons.svg#icon-twitter"></use>
                             </svg></a></li>
                     <li class="footer-socials-item"><a href="" class="footer-socials-link link" target="_blank"
                             rel="noopener noopener">
-                            <svg class="footer-icons">
+                            <svg class="footer-icons" width="24" height="24">
                                 <use href="./images/icons.svg#icon-facebook"></use>
                             </svg></a>
                     </li>
                     <li class="footer-socials-item"><a href="" class="footer-socials-link link" target="_blank"
                             rel="noopener noopener">
-                            <svg class="footer-icons">
+                            <svg class="footer-icons" width="24" height="24">
                                 <use href="./images/icons.svg#icon-linkedin"></use>
                             </svg></a>
                     </li>
