--- a/portfolio.html
+++ b/portfolio.html
@@ -63,7 +63,7 @@
                         </a>
                     </li>
                     <li class="project-card-item">
-                        <a href="" class="link">
+                        <a href="" class="project-card-link link">
                             <img src="./images/project_card_2.jpg" alt="project card 2" width="360">
                             <div class="card-style">
                                 <h2 class="project-card-title">Cashless Payment</h2>
@@ -72,7 +72,7 @@
                         </a>
                     </li>
                     <li class="project-card-item">
-                        <a href="" class="link">
+                        <a href="" class="project-card-link link">
                             <img src="./images/project_card_3.jpg" alt="project card 3" width="360">
                             <div class="card-style">
                                 <h2 class="project-card-title">Meditation App</h2>
@@ -81,7 +81,7 @@
                         </a>
                     </li>
                     <li class="project-card-item">
-                        <a href="" class="link">
+                        <a href="" class="project-card-link link">
                             <img src="./images/project_card_4.jpg" alt="project card 4" width="360">
                             <div class="card-style">
                                 <h2 class="project-card-title">Taxi Service</h2>
@@ -90,7 +90,7 @@
                         </a>
                     </li>
                     <li class="project-card-item">
-                        <a href="" class="link">
+                        <a href="" class="project-card-link link">
                             <img src="./images/project_card_5.jpg" alt="project card 5" width="360">
                             <div class="card-style">
                                 <h2 class="project-card-title">Screen Illustrations</h2>
@@ -141,33 +141,33 @@
 
     <footer class="footer">
         <div class="footer-conteiner container">
-            <div>
+            <div class="footer-info-conteiner">
                 <a class="footer-link link" href="./index.html">Web<span class="footer-logo">Studio</span></a>
                 <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing
                     &
                     growth solutions.</p>
             </div>
             <div class="footer-soc-conteiner">
-                <h2 class="footer-soc-title">Social media</h2>
+                <p class="footer-soc-text">Social media</p>
                 <ul class="footer-socials-list list">
                     <li class="footer-socials-item"><a href="" class="footer-socials-link link" target="_blank"
-                            rel="noopener noreferrer"><svg class="footer-icons">
+                            rel="noopener noreferrer"><svg class="footer-icons" width="24" height="24">
                                 <use href="./images/icons.svg#icon-instagram"></use>
                             </svg> </a>
                     </li>
                     <li class="footer-socials-item"><a href="" class="footer-socials-link link" target="_blank"
-                            rel="noopener noopener"><svg class="footer-icons">
+                            rel="noopener noopener"><svg class="footer-icons" width="24" height="24">
                                 <use href="./images/icons.svg#icon-twitter"></use>
                             </svg></a></li>
                     <li class="footer-socials-item"><a href="" class="footer-socials-link link" target="_blank"
                             rel="noopener noopener">
-                            <svg class="footer-icons">
+                            <svg class="footer-icons" width="24" height="24">
                                 <use href="./images/icons.svg#icon-facebook"></use>
                             </svg></a>
                     </li>
                     <li class="footer-socials-item"><a href="" class="footer-socials-link link" target="_blank"
                             rel="noopener noopener">
-                            <svg class="footer-icons">
+                            <svg class="footer-icons" width="24" height="24">
                                 <use href="./images/icons.svg#icon-linkedin"></use>
                             </svg></a>
                     </li>
