--- a/portfolio.html
+++ b/portfolio.html
@@ -54,7 +54,7 @@
                 </ul>
                 <ul class="project-card-list list">
                     <li class="project-card-item">
-                        <a href="" class="link">
+                        <a href="" class="project-card-link link">
                             <img src="./images/project_card_1.jpg" alt="project card 1" width="360">
                             <div class="card-style">
                                 <h2 class="project-card-title">Banking App Interface Concept</h2>
