--- a/index.html
+++ b/index.html
@@ -250,27 +250,27 @@
                 <h2 class="customers-title">Customers</h2>
                 <ul class="customers-list list">
                     <li class="customers-list-item"><a href="" class="customers-link link" target="_blank"
-                            rel="noopener noreferrer"><svg class="customers-icon" width="104" height="">
+                            rel="noopener noreferrer"><svg class="customers-icon" width="104" height="56">
                                 <use href="./images/icons.svg#icon-client_1"></use>
                             </svg></a></li>
                     <li class="customers-list-item"><a href="" class="customers-link link" target="_blank"
-                            rel="noopener noreferrer"><svg class="customers-icon" width="104" height="">
+                            rel="noopener noreferrer"><svg class="customers-icon" width="104" height="56">
                                 <use href="./images/icons.svg#icon-client_2"></use>
                             </svg></a></li>
                     <li class="customers-list-item"><a href="" class="customers-link link" target="_blank"
-                            rel="noopener noreferrer"><svg class="customers-icon" width="104" height="">
+                            rel="noopener noreferrer"><svg class="customers-icon" width="104" height="56">
                                 <use href="./images/icons.svg#icon-client_3"></use>
                             </svg></a></li>
                     <li class="customers-list-item"><a href="" class="customers-link link" target="_blank"
-                            rel="noopener noreferrer"><svg class="customers-icon" width="104" height="">
+                            rel="noopener noreferrer"><svg class="customers-icon" width="104" height="56">
                                 <use href="./images/icons.svg#icon-client_4"></use>
                             </svg></a></li>
                     <li class="customers-list-item"><a href="" class="customers-link link" target="_blank"
-                            rel="noopener noreferrer"><svg class="customers-icon" width="104" height="">
+                            rel="noopener noreferrer"><svg class="customers-icon" width="104" height="56">
                                 <use href="./images/icons.svg#icon-client_5"></use>
                             </svg></a></li>
                     <li class="customers-list-item"><a href="" class="customers-link link" target="_blank"
-                            rel="noopener noreferrer"><svg class="customers-icon" width="104" height="">
+                            rel="noopener noreferrer"><svg class="customers-icon" width="104" height="56">
                                 <use href="./images/icons.svg#icon-client_6"></use>
                             </svg></a></li>
                 </ul>
